// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Avatar/Avatar Avatar Playground 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #ffd0e1;
  color: #b2104a;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-1 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #b2104a;
  width: 1rem;
  height: 1rem;
}

.emotion-5 path {
  fill: #b2104a;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
          data-testid="_avatar"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar/Avatar Avatar with icon 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-1 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-3 path {
  fill: #1451dc;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: 0.015625rem;
}

.emotion-4 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  fill: #1451dc;
  width: 1.2000000000000002rem;
  height: 1.2000000000000002rem;
}

.emotion-6 path {
  fill: #1451dc;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0.015625rem;
}

.emotion-7 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-9 {
  fill: #1451dc;
  width: 1.8rem;
  height: 1.8rem;
}

.emotion-9 path {
  fill: #1451dc;
}

.emotion-10 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.00625rem;
}

.emotion-10 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-12 {
  fill: #1451dc;
  width: 2.4000000000000004rem;
  height: 2.4000000000000004rem;
}

.emotion-12 path {
  fill: #1451dc;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0rem;
}

.emotion-13 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  fill: #1451dc;
  width: 3.2rem;
  height: 3.2rem;
}

.emotion-15 path {
  fill: #1451dc;
}

.emotion-16 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0rem;
}

.emotion-16 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-18 {
  fill: #1451dc;
  width: 4.4rem;
  height: 4.4rem;
}

.emotion-18 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
          data-testid="_avatar"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <span
              className="emotion-3"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          data-testid="_avatar"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <span
              className="emotion-6"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-7"
          data-testid="_avatar"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <span
              className="emotion-9"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-10"
          data-testid="_avatar"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <span
              className="emotion-12"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-13"
          data-testid="_avatar"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <span
              className="emotion-15"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-16"
          data-testid="_avatar"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <span
              className="emotion-18"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar/Avatar Avatar with letter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-1 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: 0.015625rem;
}

.emotion-2 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0.015625rem;
}

.emotion-3 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.00625rem;
}

.emotion-4 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0rem;
}

.emotion-5 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0rem;
}

.emotion-6 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-6"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar/Avatar Avatar with src 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-1 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: 0.015625rem;
}

.emotion-2 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0.015625rem;
}

.emotion-3 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.00625rem;
}

.emotion-4 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0rem;
}

.emotion-5 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0rem;
}

.emotion-6 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-6"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
